--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
 	"private": true,
 	"dependencies": {
 		"@types/node": "^10.12.18",
+		"@types/re-base": "^3.2.0",
 		"@types/react": "^16.7.18",
 		"@types/react-dom": "^16.0.11",
 		"bootstrap": "^4.2.1",
+		"firebase": "^5.7.2",
+		"re-base": "^4.0.0",
 		"react": "^16.7.0",
 		"react-dom": "^16.7.0",
 		"react-scripts": "2.1.2",
