--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@types/firebase": "^3.2.1",
 		"@types/node": "^10.12.18",
 		"@types/re-base": "^3.2.0",
 		"@types/react": "^16.7.18",
