--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"re-base": "^4.0.0",
 		"react": "^16.7.0",
 		"react-dom": "^16.7.0",
+		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.2",
 		"tslint": "^5.12.0",
 		"typescript": "^3.2.2"
