--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@types/": "reach/router",
 		"@types/firebase": "^3.2.1",
 		"@types/node": "^10.12.18",
 		"@types/re-base": "^3.2.0",
+		"@types/reach__router": "^1.2.2",
 		"@types/react": "^16.7.18",
 		"@types/react-dom": "^16.0.11",
+		"@types/react-router-dom": "^4.3.1",
 		"bootstrap": "^4.2.1",
 		"firebase": "^5.7.2",
 		"re-base": "^4.0.0",
