--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 		"@types/re-base": "^3.2.0",
 		"@types/reach__router": "^1.2.2",
 		"@types/react": "^16.7.18",
+		"@types/react-autosuggest": "^9.3.6",
 		"@types/react-dom": "^16.0.11",
 		"@types/react-router-dom": "^4.3.1",
 		"bootstrap": "^4.2.1",
 		"firebase": "^5.7.2",
 		"re-base": "^4.0.0",
 		"react": "^16.7.0",
+		"react-autosuggest": "^9.4.3",
 		"react-dom": "^16.7.0",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.2",
