--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,18 @@
 {
 	"short_name": "WL-TRACKER",
 	"name": "Weigthlift Tracker",
+	"icons": [
+		{
+			"src": "./icons-192.png",
+			"type": "image/png",
+			"sizes": "192x192"
+		},
+		{
+			"src": "./icons-512.png",
+			"type": "image/png",
+			"sizes": "512x512"
+		}
+	],
 	"start_url": ".",
 	"display": "standalone",
 	"theme_color": "#000000",
