--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,6 @@
 	],
 	"start_url": ".",
 	"display": "standalone",
-	"theme_color": "#000000",
+	"theme_color": "#69d5f0",
 	"background_color": "#ffffff"
 }
