--- a/package.json
+++ b/package.json
@@ -7,22 +7,19 @@
 		"firebase": "^5.7.2",
 		"re-base": "^4.0.0",
 		"react": "^16.7.0",
-		"react-autosuggest": "^9.4.3",
 		"react-dom": "^16.7.0",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.2"
 	},
 	"devDependencies": {
-		"tslint": "^5.12.0",
-		"typescript": "^3.2.2",
 		"@types/firebase": "^3.2.1",
 		"@types/node": "^10.12.18",
 		"@types/re-base": "^3.2.0",
-		"@types/reach__router": "^1.2.2",
 		"@types/react": "^16.7.18",
-		"@types/react-autosuggest": "^9.3.6",
 		"@types/react-dom": "^16.0.11",
-		"@types/react-router-dom": "^4.3.1"
+		"@types/react-router-dom": "^4.3.1",
+		"tslint": "^5.12.0",
+		"typescript": "^3.2.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
