--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-.firebase
 
 # testing
 /coverage
@@ -19,6 +18,8 @@
 .env.test.local
 .env.production.local
 yarn.lock
+.firebaserc
+.firebase
 
 npm-debug.log*
 yarn-debug.log*
